--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ matplotlib = "^3.2.2"
 plotly = "^4.8.2"
 cufflinks = "^0.17.3"
 seaborn = "^0.10.1"
+chart-studio = "^1.1.0"
 
 [tool.poetry.dev-dependencies]
 
