--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ plotly = "^4.8.2"
 cufflinks = "^0.17.3"
 seaborn = "^0.10.1"
 chart-studio = "^1.1.0"
+pandas-datareader = "^0.9.0"
 
 [tool.poetry.dev-dependencies]
 
