--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ cufflinks = "^0.17.3"
 seaborn = "^0.10.1"
 chart-studio = "^1.1.0"
 pandas-datareader = "^0.9.0"
+scikit-learn = "^0.23.1"
 
 [tool.poetry.dev-dependencies]
 
