--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ seaborn = "^0.10.1"
 chart-studio = "^1.1.0"
 pandas-datareader = "^0.9.0"
 scikit-learn = "^0.23.1"
+nltk = "^3.5"
 
 [tool.poetry.dev-dependencies]
 
