--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,7 +7,7 @@ authors = ["Gary Loayza <loayzag91@gmail.com>"]
 [tool.poetry.dependencies]
 python = "^3.8"
 jupyter = "^1.0.0"
-numpy = "^1.19.0"
+numpy = "1.18.4"
 pandas = "^1.0.5"
 matplotlib = "^3.2.2"
 plotly = "^4.8.2"
@@ -17,6 +17,7 @@ chart-studio = "^1.1.0"
 pandas-datareader = "^0.9.0"
 scikit-learn = "^0.23.1"
 nltk = "^3.5"
+tensorflow = "^2.3.1"
 
 [tool.poetry.dev-dependencies]
 
