--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,7 +5,7 @@ description = ""
 authors = ["Gary Loayza <loayzag91@gmail.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.8"
+python = "~3.8"
 jupyter = "^1.0.0"
 numpy = "1.18.4"
 pandas = "^1.0.5"
