--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ pandas-datareader = "^0.9.0"
 scikit-learn = "^0.23.1"
 nltk = "^3.5"
 tensorflow = "^2.3.1"
+tensorboard = "^2.4.0"
 
 [tool.poetry.dev-dependencies]
 
